metadata/force-app/main/default/objects/CustomName_tBZir__c/CustomName_tBZir__c.object-meta.xml
<CustomObject>
    <description>Description_kwgPL</description>
    <label>CustomLabel_BPqgY</label>
    <nameField>
        <label>CustomLabel_BPqgY</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_BPqgYs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>