metadata/force-app/main/default/objects/CustomName_tBZir__c/fields/CustomField_hAeIb__c.field-meta.xml
<CustomField>
    <fullName>CustomField_hAeIb__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldfxpyW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>