metadata/force-app/main/default/objects/CustomName_tBZir__c/fields/CustomField_vJnAt__c.field-meta.xml
<CustomField>
    <fullName>CustomField_vJnAt__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldffyjq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>